<resources>
    <string name="app_name">SmartCalc</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="six">6</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="ac">AC</string>
    <string name="undo">DEL</string>
    <string name="three">3</string>
    <string name="minus">-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="perc">%</string>
    <string name="divide">/</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="multi">*</string>
    <string name="plusMinus">+/-</string>
    <string name="cancel">C</string>
    <string name="setting">S</string>
    <string name="res">=%s</string>
</resources>